# Multiverso-DataStructure-2025-II

./: .gitignore  CMakeLists.txt  README.md
Deprecated/src/: Old_main.cpp
include/core/: Arcane.hpp  Arrow.hpp  DinamicArray.hpp  Node.hpp
include/graphics/: Geometry.hpp  Renderer.hpp  ShaderManager.hpp
include/ui/: GUI.hpp  InputHandler.hpp
include/utils/: Camera.hpp  MathUtils.hpp
src/: main.cpp
src/core/: Arcane.cpp  Arrow.cpp
src/graphics/: Geometry.cpp  Renderer.cpp  ShaderManager.cpp
src/ui/: GUI.cpp
src/utils/: Camera.cpp
